Change file names and models
